remove confused and zombie

--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
         { id: "tiger", text: "tiger" },
         // { id: "turtle", text: "turtle" },
         // { id: "volcano", text: "volcano" },
-        { id: "wolf", text: "wolf" },
-        { id: "zombie", text: "zombie" }
+        { id: "wolf", text: "wolf" }
+        // { id: "zombie", text: "zombie" }
       ];
 
       const attire = [
@@ -493,7 +493,7 @@
       ];
 
       const mood = [
-        { id: "confused", text: "confused" },
+        // { id: "confused", text: "confused" },
         { id: "fierce", text: "fierce" },
         { id: "happy", text: "happy" },
         { id: "silly", text: "silly" },
