--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
               if (!m) return;
               const path = m[1];
               const dancer = m[2];
-              const href = `https://levelbuilder-studio.code.org/courses/mix-move-ai-2025/units/1/lessons/1/levels/3?path=${encodeURIComponent(
+              const href = `https://staging-studio.code.org/courses/mix-move-ai-2025/units/1/lessons/1/levels/3?path=${encodeURIComponent(
                 path
               )}&dancer=${encodeURIComponent(dancer)}&body=default`;
               window.open(href, "_blank", "noopener");
