--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         background: var(--prev-bg);
         /* border: 1px dashed #2a2a2f;
         border-radius: 12px; */
-        padding: 10px;
+        padding: 0px;
         display: grid;
         place-items: center;
         overflow: hidden;
@@ -468,8 +468,7 @@
     <script>
       const BASE =
         "https://curriculum.code.org/media/musiclab/generate/dancer/";
-      const MANIFEST_URL =
-        "https://curriculum.code.org/media/musiclab/generate/dancer/manifest/adlib-manifest-test-03.json";
+      const MANIFEST_URL = BASE + "manifest/adlib-manifest.json";
       const blocklists = new Map();
       function normalizeName(s) {
         return String(s || "")
